travel - bug fix for page header alignment

--- a/webapp/sass/views/pages/travel.scss
+++ b/webapp/sass/views/pages/travel.scss
@@ -8,12 +8,6 @@
 
 //images
 //----------------------
-#travel-title {
-  max-width: 1120px;
-  padding: 0 10px;
-  margin: 0.67em auto;
-}
-
 #travel-images-container {
   width:100%;
   opacity: 0;
